# story_oneline

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  test.py
main/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_remove_role_role_name_alter_customuser_role.py  0003_alter_customuser_role.py  0004_alter_book_image_alter_chapter_image.py  0005_alter_chapter_image.py  0006_alter_book_image_alter_chapter_image.py
main/serializers/: AudioUploadForm.py  BookSerializer.py  CategorySerializer.py  CategorySrializer.py  ChapterSerializer.py  UserSerializer.py  __init__.py
main/views/: BookViewSet.py  CategoryViewSet.py  ChapterViewSet.py  __init__.py
render/: index.html
storyOnline/: asgi.py  settings.py  urls.py  wsgi.py
