[tool.poetry]
name = "storyonline"
version = "0.1.0"
description = ""
authors = ["hainh3 <hainh3@smartosc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
djangorestframework = "^3.14.0"
markdown = "^3.5.2"
django-filter = "^23.5"
rest-framework-simplejwt = "^0.0.2"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^10.2.0"
pyttsx3 = "^2.90"
pydub = "^0.25.1"
ffmpeg-downloader = "^0.3.0"
gtts = "^2.5.1"
install = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
